--- a/intel.html
+++ b/intel.html
@@ -1,10 +1,10 @@
 
 <html>
   <head>
-    <title>Bri</title>
+    <title></title>
   </head>
   
   <body>
-    <h1>Bri</h1>
+    <h1></h1>
   </body>
 </html>
