--- a/intel.html
+++ b/intel.html
@@ -1,11 +1,13 @@
 
 <html>
   <head>
-    <title>12,9,16,16,19</title>
-  <-- A=5 --/>
+    <title>A=5</title>
   </head>
   <body>
     <h1>24,12,13,23 13,23 9,18,7,22,29,20,24,9,8</h1>
-    <p>13,10 22.9,5,8,13,18,11 24,12,13,23 29,19,25 5,22,9 5 <p>
+    <p>13,10 22.9,5,8,13,18,11 24,12,13,23 29,19,25 5,22,9 5 10,22,9,13,18,8 19,22 14,25,23,24 23,24,25,17,6,16,9,8 19,18 24,12,13,23 <p>
+    
   </body>
+  <style>
+    
 </html>
